# rsspice

./: Cargo.toml  LICENSE-MIT  LICENSE.md  README.md
.github/workflows/: rust.yml
examples/: gfoclt_ex1.rs  gfoclt_ex1.tm  gfoclt_ex1_mt.rs  simple.rs
lessons/: .gitignore  README.md
lessons/binary_pck/: erotat.rs  erotat.tm
lessons/event_finding/: visibl.rs  visibl.tm
lessons/insitu_sensing/: scvel.rs  scvel.tm
lessons/remote_sensing/: convtm.rs  convtm.tm  subpts.rs  subpts.tm
src/: lib.rs  tspice.rs
src/api/: cell.rs  charvec.rs  errors.rs  mod.rs
testdata/: README.txt
